adding image online

--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
 
 		<section id="about">
 			<div id="about-image" class="text-center">
-				<img src="rahulphoto.jpeg">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1uENsfHX_t2wf1PJ9YL2jw8XkWV7UXK7uiuT9WDHhlZbZthwUVQVjz1kwkCZp2njRQN4&usqp=CAU">
 				<div>
 					<p id="about-para">
                 A code lover,with a undying passion for development contributed to various <span style="color:#2857a4;">live projects.</span> Knowledgeable about <span style="color:#2857a4;">web development</span > and <span style="color:#2857a4;">java programming</span> language with a clear grasp of <span style="color:#2857a4;">OOPS fundamentals.</span> Excellent collaboration and communication skills. Team player with a can-do attitude,phenomenal <span  style="color:#2857a4;">management skills</span>,and a strong user focus. 
